templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marshtravel-services-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "use"
    kubernetes.io/ingress.global-static-ip-name: "marshtravel-api-2"
spec:
  rules:
  - http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 3001
      - path: /user
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 3001
      - path: /destination
        pathType: Prefix
        backend:
          service:
            name: destination
            port:
              number: 3002
      - path: /adm
        pathType: Prefix
        backend:
          service:
            name: destination
            port:
              number: 3002
      - path: /explorer
        pathType: Prefix
        backend:
          service:
            name: destination
            port:
              number: 3002
      - path: /trip
        pathType: Prefix
        backend:
          service:
            name: trip
            port:
              number: 3003
      - path: /review
        pathType: Prefix
        backend:
          service:
            name: review
            port:
              number: 3004
